# knowledge_assistant_rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: codecov.yml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: models_rag.py  routes_rag.py
app/core/: limiter.py  logging.py  security.py  settings.py
app/llm/: __init__.py  base.py  client.py  dummy_client.py  ollama_client.py
app/models/: schemas.py
app/rag/: chunking.py  embeddings.py  ingestion.py  pipeline.py  retrieval.py  vector_store.py
rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_rag.py
tests/integration/: test_rag_placeholder.py
tests/unit/: test_health.py
